--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
         <div class="p-2 rounded-xl bg-brand-500/20 border border-brand-400/30">
           <i data-lucide="waves" class="w-5 h-5"></i>
         </div>
-        <span class="text-lg font-extrabold tracking-wide">ACAPELA</span>
+        <span class="text-lg font-extrabold tracking-wide">Gradasi Acapella</span>
       </a>
       <div class="hidden md:flex items-center gap-6 text-sm">
         <a href="#about" class="hover:text-brand-200">About</a>
