--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
             <h1 class="mt-3 text-4xl md:text-6xl font-extrabold leading-tight">
               Branding Group of <span class="text-brand-200">Acapela</span>
             </h1>
-            <p class="mt-4 text-white/80 text-lg">Reimagines voices as instruments, crafting bold harmonies and fresh twists on every song. More than just a group, they’re storytellers without instruments—delivering rhythm, soul, and emotion through pure vocal power. Their mission: to spark connection, joy, and wonder with every performance..</p>
+            <p class="mt-4 text-white/80 text-lg">Reimagines voices as instruments, crafting bold harmonies and fresh twists on every song. More than just a group, we’re storytellers without instruments—delivering rhythm, soul, and emotion through pure vocal power with spark connection, joy, and wonder with every performance..</p>
             <div class="mt-8 flex flex-wrap gap-3">
               <a href="#media" class="px-5 py-3 rounded-full bg-brand-500 hover:bg-brand-600 text-slate-950 font-semibold">Listen & Watch</a>
               <a href="#branding" class="px-5 py-3 rounded-full border border-white/20 hover:border-white/40">Brand with Us</a>
