--- a/index.html
+++ b/index.html
@@ -89,9 +89,9 @@
           <div class="glass-dark shine rounded-3xl p-8 md:p-12 shadow-xl">
             <p class="uppercase tracking-[0.3em] text-brand-200/80 text-xs">Live • Human Beat • Harmony</p>
             <h1 class="mt-3 text-4xl md:text-6xl font-extrabold leading-tight">
-              Branding Group of <span class="text-brand-200">Acapela</span>
+              More Than Just<span class="text-brand-200">Music</span>
             </h1>
-            <p class="mt-4 text-white/80 text-lg">Reimagines voices as instruments, crafting bold harmonies and fresh twists on every song. More than just a group, we’re storytellers without instruments—delivering rhythm, soul, and emotion through pure vocal power with spark connection, joy, and wonder with every performance..</p>
+            <p class="mt-4 text-white/80 text-lg">Reimagines voices as instruments, crafting bold harmonies and fresh twists on every song. More than just a group, we’re storytellers without instruments—delivering rhythm, soul, and emotion through pure vocal power, spark connection, joy, and wonder with every performance.</p>
             <div class="mt-8 flex flex-wrap gap-3">
               <a href="#media" class="px-5 py-3 rounded-full bg-brand-500 hover:bg-brand-600 text-slate-950 font-semibold">Listen & Watch</a>
               <a href="#branding" class="px-5 py-3 rounded-full border border-white/20 hover:border-white/40">Brand with Us</a>
@@ -123,7 +123,7 @@
       <div class="grid lg:grid-cols-3 gap-8">
         <div class="lg:col-span-2 glass-dark rounded-3xl p-8 border border-white/10">
           <h2 class="text-3xl font-extrabold mb-4">Our Story</h2>
-          <p class="text-white/80 leading-relaxed">Inspired by contemporary pioneers and classic doo‑wop roots, Acapela began as a creative studio for vocal harmony and brand harmony. Today we design sonic identities, perform headlining shows, and partner with labels & brands to bring campaigns to life — all with nothing but human voice.</p>
+          <p class="text-white/80 leading-relaxed">We are Gradasi Acapella, six voices blending into one. Every performance is our canvas—where harmony, rhythm, and emotion collide. We don’t just sing songs, we create experiences, reimagining music with vibrant nuance and delivering unforgettable acapella moments.</p>
           <div class="mt-6 grid md:grid-cols-3 gap-4">
             <div class="glass rounded-2xl p-4">
               <div class="text-3xl font-extrabold">120+</div>
