--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
           <div class="glass-dark shine rounded-3xl p-8 md:p-12 shadow-xl">
             <p class="uppercase tracking-[0.3em] text-brand-200/80 text-xs">Live • Human Beat • Harmony</p>
             <h1 class="mt-3 text-4xl md:text-6xl font-extrabold leading-tight">
-              More Than Just<span class="text-brand-200">Music</span>
+              More Than Just <span class="text-brand-200">Music</span>
             </h1>
             <p class="mt-4 text-white/80 text-lg">Reimagines voices as instruments, crafting bold harmonies and fresh twists on every song. More than just a group, we’re storytellers without instruments—delivering rhythm, soul, and emotion through pure vocal power, spark connection, joy, and wonder with every performance.</p>
             <div class="mt-8 flex flex-wrap gap-3">
@@ -98,8 +98,8 @@
             </div>
             <div class="mt-8 flex items-center gap-6 text-xs text-white/70">
               <div class="flex items-center gap-2"><i data-lucide="mic" class="w-4 h-4"></i> 100% Vocal</div>
-              <div class="flex items-center gap-2"><i data-lucide="star" class="w-4 h-4"></i> Premium Partners</div>
-              <div class="flex items-center gap-2"><i data-lucide="sparkles" class="w-4 h-4"></i> Glass Aesthetic</div>
+              <div class="flex items-center gap-2"><i data-lucide="star" class="w-4 h-4"></i> Full Energy</div>
+              <div class="flex items-center gap-2"><i data-lucide="sparkles" class="w-4 h-4"></i> No Instrument</div>
             </div>
           </div>
         </div>
