--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
       <div class="grid lg:grid-cols-3 gap-8">
         <div class="lg:col-span-2 glass-dark rounded-3xl p-8 border border-white/10">
           <h2 class="text-3xl font-extrabold mb-4">Our Story</h2>
-          <p class="text-white/80 leading-relaxed">We are Gradasi Acapella, six voices blending into one. Every performance is our canvas—where harmony, rhythm, and emotion collide. We don’t just sing songs, we create experiences, reimagining music with vibrant nuance and delivering unforgettable acapella moments.</p>
+          <p class="text-white/80 leading-relaxed">We are Gradasi Acapella, since 1999 six voices blending into one. Every performance is our canvas—where harmony, rhythm, and emotion collide. We don’t just sing songs, we create experiences, reimagining music with vibrant nuance and delivering unforgettable acapella moments.</p>
           <div class="mt-6 grid md:grid-cols-3 gap-4">
             <div class="glass rounded-2xl p-4">
               <div class="text-3xl font-extrabold">120+</div>
@@ -142,7 +142,7 @@
         <div class="space-y-4">
           <div class="glass-dark rounded-3xl p-6 border border-white/10">
             <h3 class="font-bold mb-2 flex items-center gap-2"><i data-lucide="users" class="w-5 h-5"></i> Voices</h3>
-            <p class="text-white/75 text-sm">Soprano • Alto • Tenor • Baritone • Bass • Vocal Percussion</p>
+            <p class="text-white/75 text-sm">Iman as Vocal & Bass • Yudhi as a Baritone • Azis as a Human Drum & Tenor • Wiwid as a Bass & Beat Box • Akbar as a Tenor • Fajar as a Tenor</p>
           </div>
           <div class="glass-dark rounded-3xl p-6 border border-white/10">
             <h3 class="font-bold mb-2 flex items-center gap-2"><i data-lucide="medal" class="w-5 h-5"></i> Highlights</h3>
